# GitSpark

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: ai.rs  assets.rs  git.rs  main.rs  models.rs  storage.rs  ui.rs
src/ui/: app.rs  branch_context_menu.rs  changes_context_menu.rs  domain_state.rs  history_context_menu.rs  mod.rs  settings_modal.rs  sidebar.rs  status_bar.rs  theme.rs  toolbar.rs  ui_state.rs  workspace.rs
src/ui/components/: buttons.rs  changes_list.rs  commit.rs  diff.rs  diff_viewer.rs  history_list.rs  history_viewer.rs  menu_bar.rs  mod.rs  settings_window.rs  sidebar.rs  status_bar.rs  syntax.rs  toolbar.rs
src/ui/primitives/: badge.rs  button.rs  dropdown.rs  mod.rs  row.rs  surface.rs  text_input.rs
windows/: app.rc
