[package]
name = "github-rusttop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
eframe = "0.31.0"
egui = "0.31.0"
rfd = "0.15"
egui-phosphor = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
ureq = { version = "3.1", features = ["json"] }
