[package]
name = "gitspark"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
rust-embed = "8"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
ureq = { version = "3.1", features = ["json"] }
regex = "1.12.3"
syntect = "5.3.0"
once_cell = "1.21.3"
open = "5.3.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
